Updated Portfolio Content

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-        <link rel="stylesheet" type="text/css" href="assets/css/jquery.fancybox.css">
-        <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
+        	<link rel="stylesheet" type="text/css" href="assets/css/jquery.fancybox.css">
+        	<link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
 	</head>
 	<body class="is-preload">
 
@@ -49,9 +49,10 @@
 									</div>
 								</div>								
 								<ul class="alt">
-									<li>Designed a content management website to blog travel stories.</li>
-									<li>Blogged rich content on travel destinations to engage people into the website.</li>
-									<li>Created do-follow backlinks  for the Latemaster travel website through blogs for optimizing the website in Search Engine.</li>
+									<li>Blog Latemaster is a child product for Late Master Travel, Inc, that primarily focuses on travel blog and experiences of traveller on travel destinations.</li>
+									<li>It also includes images for individual destinations that a visitor can get inspired to travel the destination.</li>
+									<li>The websites has rich content that engage more viewers to get more digital traffic for its parent domain.</li>
+                                    <li>The website has quality blogs that consists of do follow Backlinks for the official Latemaster domain.</li>
 								</ul>
 								<h3 style="margin-top:-1.5em;">Technical Info</h3>
 								<ul class="icons">
@@ -73,10 +74,12 @@
 									</div>
 								</div>								
 								<ul class="alt">
-									<li>Designed a travel portal using wordpress for travel and tour packages.</li>
-									<li>Added tour packages with attractive images and descriptions for each pakages to engage the viewers.</li>
-									<li>Integrated social media platform with the website for viewers to follow the business on social media, including facebook comments for each tour on its descriptions.</li>
-                                    <li>Integrated Eternal API's like Taxicode for taxe service and Rentalcars for car hiring services in our travel website.</li>
+									<li>Holiday Latemaster is a child product for Late Master Travel, Inc, that primarily focuses on travel packages and details of travel information on a particular destination.</li>
+									<li>The web application was designed on top of Wordpress platform.</li>
+									<li>The application also includes fare aggregator for each package.</li>
+                                    <li>The fare for each package was described using “Gold medal” travel plan.</li>
+                                    <li>“Rental Cars” API is integrated into the website to use their service for cheapest car rentals.</li>
+                                    <li>“Taxi Code” API is integrated into the website to use their service for booking one way or round trip taxi service.</li>
 								</ul>
 								<h3 style="margin-top:-1.5em;">Technical Info</h3>
 								<ul class="icons">
@@ -98,8 +101,11 @@
 									</div>
 								</div>								
 								<ul class="alt">
-									<li>Designed and developed a website for Kerala Association of New Jersey using core html and javascript.</li>
-									<li>Used Server-side PHP script for SMTP mailing in contact us page.</li>									
+									<li>Kanj is a web application developed for Kerala Association of New Jersey developed using HTML 5 and CSS 3.</li>
+									<li>Kanj primarily focus on events and conference for the people of Kerala residing in New Jersey.</li>
+                                    <li>Kanj had a complex design to maintain the media files for the Kanj Events categorized and sub categorized into years and events respectively.</li>
+                                    <li>It also the lists all the presidents chronologically form the start of the Association.</li>
+                                    <li>Kanj allows visitor to contact the organization using a SMTP mail configured contact form.</li>
 								</ul>
 								<h3 style="margin-top:-1.5em;">Technical Info</h3>
 								<ul class="icons">
@@ -121,10 +127,11 @@
 									</div>
 								</div>								
 								<ul class="alt">
-									<li>Designed and developed a commercial program that had a refer and earn structure.</li>
-									<li>Involved in creating stored procedures in SQL server to solve complex logics required for the business.</li>
-									<li>Extensively involved with the client from the intial stage of the project until the production release to understand the business requirement.</li>
-                                    <li>Involved in Integrating Payment Gateway API of federal bank into the website.</li>
+									<li>Tunnel2towers is an online website to earn money with referral marketing, primarily focusing on level income that has multi-levels referrals for a referrer.</li>
+									<li>It also offers a referrer with a parallel plan structure where he/she can also rebirth to avail more benefits.</li>
+									<li>The website is developed the in .NET framework 4.5.1 MVC environment.</li>
+                                    <li>The versions for the web application are controlled in TFS.</li>
+                                    <li>The web application is developed with a complex module for ePin management where a user can be part of the system using ePin.</li>
 								</ul>
 								<h3 style="margin-top:-1.5em;">Technical Info</h3>
 								<ul class="icons">
@@ -149,9 +156,13 @@
 									</div>
 								</div>								
 								<ul class="alt">
-									<li>Developed and designed an official website for Shri Balabhadra Majhi.</li>
-									<li>Created Webservices for the mobile application developed for Shri Balahadra Majhi to interact with the database.</li>
-									<li>Designed logic for the web application to keep track of all the campaigns and its impact ratio held by Shri Balabhadra Majhi during the election.</li>
+									<li>An official web application of Shri Balabhadra Majhi was developed to keep a track of the election campaigns.</li>
+									<li>The web application was developed on .NET framework 4.5 MVC environment.</li>
+									<li>The web application primarily focuses on listing the campaigns and events held during the election.</li>
+                                    <li>The website maintains the expenses of each campaign.</li>
+                                    <li>Candidate can add constituency details in the application for the followers to register and join the campaign digitally.</li>
+                                    <li>The web application was designed for the candidate to send SMS to followers individually or in bulk to all or constitution wise.</li>
+                                    <li>The website also has the details of the achievements and journey of the electing candidate.</li>
 								</ul>
 								<h3 style="margin-top:-1.5em;">Technical Info</h3>
 								<ul class="icons">
@@ -176,9 +187,13 @@
 									</div>
 								</div>								
 								<ul class="alt">
-									<li>Developed and designed an official website for Shri Dambaru Sisa.</li>
-									<li>Created Webservices for the mobile application developed for Shri Dambaru Sisa to interact with the database.</li>
-									<li>Designed logic for the web application to keep track of all the campaigns and its impact ratio held by Shri Dambaru Sisa during the election.</li>
+									<li>An official web application of Shri Dambarudhar Sisa was developed to keep a track of the election campaigns.</li>
+									<li>The web application was developed on .NET framework 4.5 MVC environment.</li>
+									<li>The web application primarily focuses on listing the campaigns and events held during the election.</li>
+                                    <li>The website maintains the expenses of each campaign.</li>
+                                    <li>Candidate can add constituency details in the application for the followers to register and join the campaign digitally.</li>
+                                    <li>The web application was designed for the candidate to send SMS to followers individually or in bulk to all or constitution wise.</li>
+                                    <li>The website also has the details of the achievements and journey of the electing candidate.</li>
 								</ul>
 								<h3 style="margin-top:-1.5em;">Technical Info</h3>
 								<ul class="icons">
@@ -203,9 +218,13 @@
 									</div>
 								</div>								
 								<ul class="alt">
-									<li>Developed and designed an official website for Rabi Nanda.</li>
-									<li>Created Webservices for the mobile application developed for Shri Rabi Nanda to interact with the database.</li>
-									<li>Designed logic for the web application to keep track of all the campaigns and its impact ratio held by Shri Rabi Nanda during the election.</li>
+									<li>An official web application of Shri Rabi Nanda was developed to keep a track of the election campaigns.</li>
+									<li>The web application was developed on .NET framework 4.5 MVC environment.</li>
+									<li>The web application primarily focuses on listing the campaigns and events held during the election.</li>
+                                    <li>The website maintains the expenses of each campaign.</li>
+                                    <li>Candidate can add constituency details in the application for the followers to register and join the campaign digitally.</li>
+                                    <li>The web application was designed for the candidate to send SMS to followers individually or in bulk to all or constitution wise.</li>
+                                    <li>The website also has the details of the achievements and journey of the electing candidate.</li>
 								</ul>
 								<h3 style="margin-top:-1.5em;">Technical Info</h3>
 								<ul class="icons">
@@ -230,9 +249,13 @@
 									</div>
 								</div>								
 								<ul class="alt">
-									<li>Developed and designed an official website for Sanraj Gond.</li>
-									<li>Created Webservices for the mobile application developed for Shri Sanraj Gond to interact with the database.</li>
-									<li>Designed logic for the web application to keep track of all the campaigns and its impact ratio held by Shri Sanraj Gond during the election.</li>
+									<li>An official web application of Shri Sanraj Gond was developed to keep a track of the election campaigns.</li>
+									<li>The web application was developed on .NET framework 4.5 MVC environment.</li>
+									<li>The web application primarily focuses on listing the campaigns and events held during the election.</li>
+                                    <li>The website maintains the expenses of each campaign.</li>
+                                    <li>Candidate can add constituency details in the application for the followers to register and join the campaign digitally.</li>
+                                    <li>The web application was designed for the candidate to send SMS to followers individually or in bulk to all or constitution wise.</li>
+                                    <li>The website also has the details of the achievements and journey of the electing candidate.</li>
 								</ul>
 								<h3 style="margin-top:-1.5em;">Technical Info</h3>
 								<ul class="icons">
@@ -257,11 +280,13 @@
 									</div>
 								</div>								
 								<ul class="alt">
-									<li>Designed and Developed a commercial eductional website.</li>
-									<li>Extensively involved with the client from the initial requirement gathering to the launch of the website.</li>
-									<li>Designed complex logic for program booking module and program creating module as per the requirement.</li>
-                                    <li>Integrated full-calender API into the website to display program on calendar event</li>
-                                    <li>Integrated Razorpay API for payment integration for Booking programs and Subscription Plans based on the requirement.</li>
+									<li>Tunnel2towers is an online web portal designed and developed for keen learners that primarily focuses on providing seminars and training courses with high quality instructors.</li>
+									<li>The website also gives instructors an opportunity to be a part of the system joining with various subscription plan offered by the business.</li>
+									<li>The website is developed the in .NET framework 4.5.1 MVC environment.</li>
+                                    <li>The versions for the web application are controlled in TFS.</li>
+                                    <li>The website is integrated with “Full calendar API” and the business flow has been developed for the learners to register for a program using calendar event.</li>
+                                    <li>The website payment is handled by integrating “Razor payment gateway”.</li>
+                                    <li>Payment module of the website is associated with booking programs and trainer subscriptions.</li>
 								</ul>
 								<h3 style="margin-top:-1.5em;">Technical Info</h3>
 								<ul class="icons">
@@ -296,6 +321,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-            <script src="assets/js/jquery.fancybox.js"></script>
+            		<script src="assets/js/jquery.fancybox.js"></script>
 	</body>
 </html>
