--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             
             $('body').on('click', '[data-fancybox-download]', function(e) {
                e.preventDefault();
-               fetch('http://127.0.0.1:50073/assets/Resume.pdf')
+               fetch('/assets/Resume.pdf')
                   .then(resp => resp.blob())
                   .then(blob => {
                     const url = window.URL.createObjectURL(blob);
