Updated Profile Content, Visit Now Button

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 			<header id="header">
 				<div class="inner">
 					<h2 class="hv-font-heading">Deepak Pattnaik</h2>
-					<h1><strong>Software Professional</strong> with Two years of experience in UX/UI development
-                        with  working  knowledge on full stack development and  digital marketing.                       
+					<h1><strong>Software Professional</strong> with three years of experience in full stack development,
+                        along with  working  knowledge on digital marketing.                       
                     </h1>
-                    <a href="/images/Resume.jpg" data-fancybox data-caption="Deepak Pattnaik Resume" data-width="1260" class="button" data-buttons='["download","close"]' style="color:#ffffff !important">Resume</a>                                        
+                    <a href="/images/Resume.jpg" data-fancybox data-caption="Deepak Pattnaik Resume" data-width="1260" class="button" data-buttons='["download","close"]' style="color:#ffffff !important; margin:20px">Resume</a>                                        
 				</div>
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="https://www.facebook.com/dpak2112" target="_blank" class="icon brands"><i class="fab fa-facebook-f"></i><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.linkedin.com/in/deepak-pattnaik/" target="_blank" class="icon brands"><i class="fab fa-linkedin-in"></i><span class="label">LinkedIn</span></a></li>                      
 						<li><a href="mailto:deepak.pattnaik@outlook.in" class="icon solid"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
-						<li><a href="https://idpak.wordpress.com/" target="_blank" class="icon brands"><i class="fas fa-blog"></i><span class="label">Blog</span></a></li>
+						<li><a href="https://solosafarnama.wordpress.com/" target="_blank" class="icon brands"><i class="fas fa-blog"></i><span class="label">Blog</span></a></li>
 					</ul>					
 				</div>
 			</header>
@@ -33,19 +33,19 @@
 			<div id="main">	
 				<!-- Two -->
 					<section id="two">
-						<h2 class="hv-portfolio-heading">Portfolio</h2>
+						<h2 class="hv-portfolio-heading">Professional Works</h2>
 						<div class="row">
 							<article class="col-12 col-12-xsmall work-item">
                                 <a href="images/portfolio/Blog%20Latemaster_Full.png" data-fancybox data-caption="Blog Latemaster">
                                     <img class="image fit thumb" src="images/thumbs/Blog%20Latemaster.jpg" alt="blog_lm_image" />
                                 </a>
 								<div class="row">
-									<div class="col-8 col-7-small">
+									<div class="col-8 col-12-small">
 										<h2 class="hv-portfolio-sub-heading">Latemaster Blog</h2>
-										<h3><strong>Role - </strong> Designer/Content Creator</h3>
+										<h3><strong>Role - </strong> UI Developer, Content Creator</h3>
 									</div>
-									<div class="col-4 col-5-small">
-										<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="position: absolute;right: 6%;">Visit Now</a>
+									<div class="col-4 col-12-small">
+										<!--<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="width: 100%; letter-spacing: 2px;">Visit Now</a>-->
 									</div>
 								</div>								
 								<ul class="alt">
@@ -65,12 +65,12 @@
                                     <img class="image fit thumb" src="images/thumbs/Holiday%20Latemaster.jpg" alt="holiday_lm_image" />
                                 </a>
 								<div class="row">
-									<div class="col-8 col-7-small">
+									<div class="col-8 col-12-small">
 										<h2 class="hv-portfolio-sub-heading">Holiday Latemaster</h2>
-										<h3><strong>Role - </strong> Designer/Content Creator</h3>
+										<h3><strong>Role - </strong> UI Developer, Content Creator</h3>
 									</div>
-									<div class="col-4 col-5-small">
-										<a href="https://holiday.latemaster.com/" target="_blank" class="button primary small" style="position: absolute;right: 6%;">Visit Now</a>
+									<div class="col-4 col-12-small">
+										<a href="https://holiday.latemaster.com/" target="_blank" class="button primary small" style="width: 100%; letter-spacing: 2px;">Visit Now</a>
 									</div>
 								</div>								
 								<ul class="alt">
@@ -92,12 +92,12 @@
                                     <img class="image fit thumb" src="images/thumbs/Kanj.jpg" alt="kanj_image" />
                                 </a>
 								<div class="row">
-									<div class="col-8 col-7-small">
+									<div class="col-8 col-12-small">
 										<h2 class="hv-portfolio-sub-heading">KANJ</h2>
-										<h3><strong>Role - </strong> Designer/Developer</h3>
+										<h3><strong>Role - </strong> UI Developer</h3>
 									</div>
-									<div class="col-4 col-5-small">
-										<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="position: absolute;right: 6%;">Visit Now</a>
+									<div class="col-4 col-12-small">
+										<!--<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="width: 100%; letter-spacing: 2px;">Visit Now</a>-->
 									</div>
 								</div>								
 								<ul class="alt">
@@ -118,12 +118,12 @@
                                     <img class="image fit thumb" src="images/thumbs/T2T%20Phase%201.jpg" alt="t2t_image" />
                                 </a>
 								<div class="row">
-									<div class="col-8 col-7-small">
+									<div class="col-8 col-12-small">
 										<h2 class="hv-portfolio-sub-heading">Tunnel2towers Phase - 1</h2>
-										<h3><strong>Role - </strong> Designer/Developer</h3>
+										<h3><strong>Role - </strong> UI Developer, Associate Developer, Support Developer</h3>
 									</div>
-									<div class="col-4 col-5-small">
-										<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="position: absolute;right: 6%;">Visit Now</a>
+									<div class="col-4 col-12-small">
+										<!--<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="width: 100%; letter-spacing: 2px;">Visit Now</a>-->
 									</div>
 								</div>								
 								<ul class="alt">
@@ -147,12 +147,12 @@
                                     <img class="image fit thumb" src="images/thumbs/Balabhadra%20Majhi.jpg" alt="balabhadra_website_image" />
                                 </a>
 								<div class="row">
-									<div class="col-8 col-7-small">
+									<div class="col-8 col-12-small">
 										<h2 class="hv-portfolio-sub-heading">Balabhadra Majhi Official Website</h2>
-										<h3><strong>Role - </strong> Designer/Developer</h3>
+										<h3><strong>Role - </strong> Full Stack Developer</h3>
 									</div>
-									<div class="col-4 col-5-small">
-										<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="position: absolute;right: 6%;">Visit Now</a>
+									<div class="col-4 col-12-small">
+										<!--<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="width: 100%; letter-spacing: 2px;">Visit Now</a>-->
 									</div>
 								</div>								
 								<ul class="alt">
@@ -178,12 +178,12 @@
                                     <img class="image fit thumb" src="images/thumbs/Dambaru%20Sisa.jpg" alt="dambaru_website_image" />
                                 </a>
 								<div class="row">
-									<div class="col-8 col-7-small">
+									<div class="col-8 col-12-small">
 										<h2 class="hv-portfolio-sub-heading">Dambaru Sisa Official Website</h2>
-										<h3><strong>Role - </strong> Designer/Developer</h3>
+										<h3><strong>Role - </strong> Full Stack Developer</h3>
 									</div>
-									<div class="col-4 col-5-small">
-										<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="position: absolute;right: 6%;">Visit Now</a>
+									<div class="col-4 col-12-small">
+										<!--<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="width: 100%; letter-spacing: 2px;">Visit Now</a>-->
 									</div>
 								</div>								
 								<ul class="alt">
@@ -209,12 +209,12 @@
                                     <img class="image fit thumb" src="images/thumbs/Rabi%20Nanda.jpg" alt="rabi_website_image" />
                                 </a>
 								<div class="row">
-									<div class="col-8 col-7-small">
+									<div class="col-8 col-12-small">
 										<h2 class="hv-portfolio-sub-heading">Rabi Nanda Official Website</h2>
-										<h3><strong>Role - </strong> Designer/Developer</h3>
+										<h3><strong>Role - </strong> Full Stack Developer</h3>
 									</div>
-									<div class="col-4 col-5-small">
-										<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="position: absolute;right: 6%;">Visit Now</a>
+									<div class="col-4 col-12-small">
+										<!--<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="width: 100%; letter-spacing: 2px;">Visit Now</a>-->
 									</div>
 								</div>								
 								<ul class="alt">
@@ -240,12 +240,12 @@
                                     <img class="image fit thumb" src="images/thumbs/Sanraj%20Gond.jpg" alt="sanraj_website_image" />
                                 </a>
 								<div class="row">
-									<div class="col-8 col-7-small">
+									<div class="col-8 col-12-small">
 										<h2 class="hv-portfolio-sub-heading">Sanraj Gond Official Website</h2>
-										<h3><strong>Role - </strong> Designer/Developer</h3>
+										<h3><strong>Role - </strong> Full Stack Developer</h3>
 									</div>
-									<div class="col-4 col-5-small">
-										<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="position: absolute;right: 6%;">Visit Now</a>
+									<div class="col-4 col-12-small">
+										<!--<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="width: 100%; letter-spacing: 2px;">Visit Now</a>-->
 									</div>
 								</div>								
 								<ul class="alt">
@@ -271,12 +271,12 @@
                                     <img class="image fit thumb" src="images/thumbs/T2T%20Phase%202.jpg" alt="t2t_image" />
                                 </a>
 								<div class="row">
-									<div class="col-8 col-7-small">
+									<div class="col-8 col-12-small">
 										<h2 class="hv-portfolio-sub-heading">Tunnel2towers Phase - 2</h2>
-										<h3><strong>Role - </strong> Designer/Developer</h3>
+										<h3><strong>Role - </strong> Full Stack Developer, Support Developer</h3>
 									</div>
-									<div class="col-4 col-5-small">
-										<a href="https://tunnel2towers.in/in" target="_blank" class="button primary small" style="position: absolute;right: 6%;">Visit Now</a>
+									<div class="col-4 col-12-small">
+										<a href="https://tunnel2towers.in/in" target="_blank" class="button primary small" style="width: 100%; letter-spacing: 2px;">Visit Now</a>
 									</div>
 								</div>								
 								<ul class="alt">
