Updated Blog link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<li><a href="https://www.facebook.com/dpak2112" target="_blank" class="icon brands"><i class="fab fa-facebook-f"></i><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.linkedin.com/in/deepak-pattnaik/" target="_blank" class="icon brands"><i class="fab fa-linkedin-in"></i><span class="label">LinkedIn</span></a></li>                      
 						<li><a href="mailto:deepak.pattnaik@outlook.in" class="icon solid"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
-						<li><a href="https://solosafarnama.wordpress.com/" target="_blank" class="icon brands"><i class="fas fa-blog"></i><span class="label">Blog</span></a></li>
+						<li><a href="https://thebackpackingsoul.wordpress.com/" target="_blank" class="icon brands"><i class="fas fa-blog"></i><span class="label">Blog</span></a></li>
 					</ul>					
 				</div>
 			</header>
