election portfolio updated

--- a/index.html
+++ b/index.html
@@ -143,12 +143,15 @@
 								</ul>                                
 							</article>
 							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/portfolio/Balabhadra%20Majhi_Full.png" data-fancybox data-caption="Balabhadra Majhi Website">
-                                    <img class="image fit thumb" src="images/thumbs/Balabhadra%20Majhi.jpg" alt="balabhadra_website_image" />
+								<a href="images/portfolio/Balabhadra%20Majhi_Full.png" data-fancybox="election" data-caption="Balabhadra Majhi Website">
+                                    <img class="image fit thumb" src="images/thumbs/Election_Campaign.jpg" alt="balabhadra_website_image" />
                                 </a>
+                                <a href="images/portfolio/Dambaru%20Sisa_Full.png" data-fancybox="election" data-caption="Dambaru Sisa Website"></a>
+                                <a href="images/portfolio/Rabi%20Nanda_Full.png" data-fancybox="election" data-caption="Rabi Nanda Website"></a>
+                                <a href="images/portfolio/Sanroj%20Gond_Full.png" data-fancybox="election" data-caption="Sanraj Gond Website"></a>
 								<div class="row">
 									<div class="col-8 col-12-small">
-										<h2 class="hv-portfolio-sub-heading">Balabhadra Majhi Official Website</h2>
+										<h2 class="hv-portfolio-sub-heading">Election Campaigning Website</h2>
 										<h3><strong>Role - </strong> Full Stack Developer</h3>
 									</div>
 									<div class="col-4 col-12-small">
@@ -156,100 +159,8 @@
 									</div>
 								</div>								
 								<ul class="alt">
-									<li>An official web application of Shri Balabhadra Majhi was developed to keep a track of the election campaigns.</li>
-									<li>The web application was developed on .NET framework 4.5 MVC environment.</li>
-									<li>The web application primarily focuses on listing the campaigns and events held during the election.</li>
-                                    <li>The website maintains the expenses of each campaign.</li>
-                                    <li>Candidate can add constituency details in the application for the followers to register and join the campaign digitally.</li>
-                                    <li>The web application was designed for the candidate to send SMS to followers individually or in bulk to all or constitution wise.</li>
-                                    <li>The website also has the details of the achievements and journey of the electing candidate.</li>
-								</ul>
-								<h3 style="margin-top:-1.5em;">Technical Info</h3>
-								<ul class="icons">
-									<li><code>HTML</code></li>
-									<li><code>C#</code></li>
-									<li><code>SQL</code></li>
-                                    <li><code>ASP .NET</code></li>
-                                    <li><code>SQL Server</code></li>
-								</ul>                                
-							</article>
-                            <article class="col-12 col-12-xsmall work-item">
-								<a href="images/portfolio/Dambaru%20Sisa_Full.png" data-fancybox data-caption="Dambaru Sisa Website">
-                                    <img class="image fit thumb" src="images/thumbs/Dambaru%20Sisa.jpg" alt="dambaru_website_image" />
-                                </a>
-								<div class="row">
-									<div class="col-8 col-12-small">
-										<h2 class="hv-portfolio-sub-heading">Dambaru Sisa Official Website</h2>
-										<h3><strong>Role - </strong> Full Stack Developer</h3>
-									</div>
-									<div class="col-4 col-12-small">
-										<!--<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="width: 100%; letter-spacing: 2px;">Visit Now</a>-->
-									</div>
-								</div>								
-								<ul class="alt">
-									<li>An official web application of Shri Dambarudhar Sisa was developed to keep a track of the election campaigns.</li>
-									<li>The web application was developed on .NET framework 4.5 MVC environment.</li>
-									<li>The web application primarily focuses on listing the campaigns and events held during the election.</li>
-                                    <li>The website maintains the expenses of each campaign.</li>
-                                    <li>Candidate can add constituency details in the application for the followers to register and join the campaign digitally.</li>
-                                    <li>The web application was designed for the candidate to send SMS to followers individually or in bulk to all or constitution wise.</li>
-                                    <li>The website also has the details of the achievements and journey of the electing candidate.</li>
-								</ul>
-								<h3 style="margin-top:-1.5em;">Technical Info</h3>
-								<ul class="icons">
-									<li><code>HTML</code></li>
-									<li><code>C#</code></li>
-									<li><code>SQL</code></li>
-                                    <li><code>ASP .NET</code></li>
-                                    <li><code>SQL Server</code></li>
-								</ul>                                
-							</article>
-							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/portfolio/Rabi%20Nanda_Full.png" data-fancybox data-caption="Rabi Nanda Website">
-                                    <img class="image fit thumb" src="images/thumbs/Rabi%20Nanda.jpg" alt="rabi_website_image" />
-                                </a>
-								<div class="row">
-									<div class="col-8 col-12-small">
-										<h2 class="hv-portfolio-sub-heading">Rabi Nanda Official Website</h2>
-										<h3><strong>Role - </strong> Full Stack Developer</h3>
-									</div>
-									<div class="col-4 col-12-small">
-										<!--<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="width: 100%; letter-spacing: 2px;">Visit Now</a>-->
-									</div>
-								</div>								
-								<ul class="alt">
-									<li>An official web application of Shri Rabi Nanda was developed to keep a track of the election campaigns.</li>
-									<li>The web application was developed on .NET framework 4.5 MVC environment.</li>
-									<li>The web application primarily focuses on listing the campaigns and events held during the election.</li>
-                                    <li>The website maintains the expenses of each campaign.</li>
-                                    <li>Candidate can add constituency details in the application for the followers to register and join the campaign digitally.</li>
-                                    <li>The web application was designed for the candidate to send SMS to followers individually or in bulk to all or constitution wise.</li>
-                                    <li>The website also has the details of the achievements and journey of the electing candidate.</li>
-								</ul>
-								<h3 style="margin-top:-1.5em;">Technical Info</h3>
-								<ul class="icons">
-									<li><code>HTML</code></li>
-									<li><code>C#</code></li>
-									<li><code>SQL</code></li>
-                                    <li><code>ASP .NET</code></li>
-                                    <li><code>SQL Server</code></li>
-								</ul>                                
-							</article>
-							<article class="col-12 col-12-xsmall work-item">
-								<a href="images/portfolio/Sanroj%20Gond_Full.png" data-fancybox data-caption="Sanraj Gond Website">
-                                    <img class="image fit thumb" src="images/thumbs/Sanraj%20Gond.jpg" alt="sanraj_website_image" />
-                                </a>
-								<div class="row">
-									<div class="col-8 col-12-small">
-										<h2 class="hv-portfolio-sub-heading">Sanraj Gond Official Website</h2>
-										<h3><strong>Role - </strong> Full Stack Developer</h3>
-									</div>
-									<div class="col-4 col-12-small">
-										<!--<a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="button primary small" style="width: 100%; letter-spacing: 2px;">Visit Now</a>-->
-									</div>
-								</div>								
-								<ul class="alt">
-									<li>An official web application of Shri Sanraj Gond was developed to keep a track of the election campaigns.</li>
+									<li>An official web application was developed for electoral candidate to keep a track of their election campaigns.</li>
+                                    <li>The web application was developed to provide digital solution for election candidates across the South-western geographic region of Odisha, custom building UI and Add-On functionality for each candidate.</li>
 									<li>The web application was developed on .NET framework 4.5 MVC environment.</li>
 									<li>The web application primarily focuses on listing the campaigns and events held during the election.</li>
                                     <li>The website maintains the expenses of each campaign.</li>
