--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 			<header id="header">
 				<div class="inner">
 					<h2 class="hv-font-heading">Deepak Pattnaik</h2>
-					<h1><strong>Software Professional</strong> with three years of experience in full stack development,
+					<h1><strong>Software Professional</strong> with more then four years of experience in full stack development,
                         along with  working  knowledge on digital marketing.                       
                     </h1>
-                    <a href="/images/Resume.jpg" data-fancybox data-caption="Deepak Pattnaik Resume" data-width="1260" class="button" data-buttons='["download","close"]' style="color:#ffffff !important; margin:20px">Resume</a>                                        
+                    <!--<a href="/images/Resume.jpg" data-fancybox data-caption="Deepak Pattnaik Resume" data-width="1260" class="button" data-buttons='["download","close"]' style="color:#ffffff !important; margin:20px">Resume</a>-->                                        
 				</div>
 				<div class="inner">
 					<ul class="icons">
